src/test/deca/context/invalid/param_same_name.deca
//ERROR :3
class A{
int lol(int x, int x){
    return x+x;
}
}